src/objects/QC_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Org specific settings</description>
    <fields>
        <fullName>Action_Plan_RecordTypeId__c</fullName>
        <label>Action Plan RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdhocTask_Actions_RecordTypeId__c</fullName>
        <label>AdhocTask Actions RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuditTrailReportId__c</fullName>
        <label>AuditTrailReportId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA_Report_Id__c</fullName>
        <label>CAPA Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Report_Id__c</fullName>
        <label>CR Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_App_consumer_key__c</fullName>
        <label>Connected App consumer key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_App_consumer_secret__c</fullName>
        <label>Connected App consumer secret</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Containment_Action_RecordTypeId__c</fullName>
        <description>Containment Action Record Type id</description>
        <label>Containment Action RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOC_Report_Id__c</fullName>
        <description>To display the Document Profile reports grouped by Status</description>
        <inlineHelpText>To display the Document Profile reports grouped by Status</inlineHelpText>
        <label>DOC Report Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition_Section_RecordTypeId__c</fullName>
        <label>Disposition Section RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentsReportList__c</fullName>
        <label>DocumentsReportList</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Audit_Trail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_CAPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CAPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_DOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable DOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Document_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Document Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_NC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable NC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instance_Name__c</fullName>
        <inlineHelpText>Salesforce instance name (e.g. na41, ap2, eu5, etc.)</inlineHelpText>
        <label>Instance Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Digital_Signature_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag To show or hide digital signature</description>
        <label>Is Digital Signature Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Due_Date_Validation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Due Date Validation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_External_System_Capa_Reference_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is External System Capa Reference Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Approvers__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Max Approvers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCReportId__c</fullName>
        <label>NCReportId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Additional_Resolution_Codes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Additional Resolution Codes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Days_For_Alerts__c</fullName>
        <label>Number Of Days For Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Cause_RecordTypeId__c</fullName>
        <label>Root Cause RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Plan_RecordTypeId__c</fullName>
        <label>Verification Plan RecordTypeId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>QC_settings</label>
</CustomObject>